tests/cases/structs/errors/union-by-owned-payload-aggregate.ari
impl Drop for i64 {
  fn drop(self) -> void {
    return;
  }
}

enum PayloadKind {
  owned,
  empty,
}

struct OwnerBox {
  value: own i64,
}

struct Packet {
  kind: PayloadKind,
  payload: union by kind {
    owned => OwnerBox,
    empty => i64,
  },
}

fn main() -> i64 {
  return 0;
}
